# Cricket

./: .gitignore  README.md  blogs.md  plan.md  pyproject.toml
docs/: analysis_t20_evolution.md  methodology.md  validation.md
metadata/: bowler_styles.csv
scripts/: smoke_check_known.py  smoke_era.py  smoke_ratings.py  smoke_wpa.py  smoke_wpa_phase.py  validate.py
src/t20x/: __init__.py  __main__.py  config.py  constants.py
src/t20x/cli/: app.py
src/t20x/cli/commands/: enrich.py  ingest.py  ratings.py
src/t20x/db/: __init__.py  engine.py  schema.py
src/t20x/ingest/: __init__.py  base.py  bowler_styles.py  cricsheet.py  loader.py  registry.py
src/t20x/models/: __init__.py  context.py  domain.py  enums.py
src/t20x/ratings/: __init__.py  bradley_terry.py  convergence.py  elo.py  era_relative.py  expected_runs.py  season_metrics.py  win_probability.py
src/t20x/validation/: calibration.py  cross_league.py  match_prediction.py  wp_holdout.py
tests/: conftest.py
tests/test_ingest/: test_cricsheet.py
tests/test_models/: test_domain.py
